--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.12",
-    "react-test-renderer": "^15.6.1"
+    "react-test-renderer": "^15.6.1",
+    "testdouble": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
